--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "serve": "^14.0.1",
     "web-vitals": "^2.1.4"
   },
+
+  
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "heroku-postbuild": "npm run build"
   },
+  
+
   "eslintConfig": {
     "extends": [
       "react-app",
